// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dock renders 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Dock
    clickHandler={[MockFunction]}
    items={
      Array [
        Object {
          "Component": [Function],
          "Content": [Function],
          "background": "#193549",
          "backgroundFill": "tomato",
          "fill": "#273B7A",
          "id": 0,
          "meta": "Joseph",
          "title": "About Me",
        },
        Object {
          "Component": [Function],
          "Content": [Function],
          "background": "#193549",
          "backgroundFill": "tomato",
          "fill": "#292929",
          "id": 1,
          "meta": "Certified",
          "title": "ReactJS",
        },
        Object {
          "Component": [Function],
          "Content": [Function],
          "background": "#193549",
          "backgroundFill": "tomato",
          "fill": "#F0DB4F",
          "id": 2,
          "meta": "Favorite Language",
          "title": "JavaScript",
        },
        Object {
          "Component": [Function],
          "Content": [Function],
          "background": "#193549",
          "backgroundFill": "#5159BF",
          "fill": "#292929",
          "id": 3,
          "meta": "Framework",
          "title": "Redux",
        },
        Object {
          "Component": [Function],
          "Content": [Function],
          "background": "#193549",
          "backgroundFill": "tomato",
          "fill": "#273B7A",
          "id": 4,
          "meta": "Problem Solving",
          "title": "algorithms",
        },
        Object {
          "Component": [Function],
          "Content": [Function],
          "background": "#193549",
          "backgroundFill": "tomato",
          "fill": "#273B7A",
          "id": 6,
          "meta": "Code as a hobby",
          "title": "python",
        },
        Object {
          "Component": [Function],
          "Content": [Function],
          "background": "#193549",
          "backgroundFill": "tomato",
          "fill": "#273B7A",
          "id": 7,
          "meta": "Value Creation",
          "title": "hackathon",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <DockIcon
          clickHandler={[MockFunction]}
          tile={
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 0,
              "meta": "Joseph",
              "title": "About Me",
            }
          }
        />,
        <DockIcon
          clickHandler={[MockFunction]}
          tile={
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#292929",
              "id": 1,
              "meta": "Certified",
              "title": "ReactJS",
            }
          }
        />,
        <DockIcon
          clickHandler={[MockFunction]}
          tile={
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#F0DB4F",
              "id": 2,
              "meta": "Favorite Language",
              "title": "JavaScript",
            }
          }
        />,
        <DockIcon
          clickHandler={[MockFunction]}
          tile={
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "#5159BF",
              "fill": "#292929",
              "id": 3,
              "meta": "Framework",
              "title": "Redux",
            }
          }
        />,
        <DockIcon
          clickHandler={[MockFunction]}
          tile={
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 4,
              "meta": "Problem Solving",
              "title": "algorithms",
            }
          }
        />,
        <DockIcon
          clickHandler={[MockFunction]}
          tile={
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 6,
              "meta": "Code as a hobby",
              "title": "python",
            }
          }
        />,
        <DockIcon
          clickHandler={[MockFunction]}
          tile={
            Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 7,
              "meta": "Value Creation",
              "title": "hackathon",
            }
          }
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [MockFunction],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "background": "#193549",
            "backgroundFill": "tomato",
            "fill": "#273B7A",
            "id": 0,
            "meta": "Joseph",
            "title": "About Me",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [MockFunction],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "background": "#193549",
            "backgroundFill": "tomato",
            "fill": "#292929",
            "id": 1,
            "meta": "Certified",
            "title": "ReactJS",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [MockFunction],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "background": "#193549",
            "backgroundFill": "tomato",
            "fill": "#F0DB4F",
            "id": 2,
            "meta": "Favorite Language",
            "title": "JavaScript",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [MockFunction],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "background": "#193549",
            "backgroundFill": "#5159BF",
            "fill": "#292929",
            "id": 3,
            "meta": "Framework",
            "title": "Redux",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [MockFunction],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "background": "#193549",
            "backgroundFill": "tomato",
            "fill": "#273B7A",
            "id": 4,
            "meta": "Problem Solving",
            "title": "algorithms",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "6",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [MockFunction],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "background": "#193549",
            "backgroundFill": "tomato",
            "fill": "#273B7A",
            "id": 6,
            "meta": "Code as a hobby",
            "title": "python",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "7",
        "nodeType": "function",
        "props": Object {
          "clickHandler": [MockFunction],
          "tile": Object {
            "Component": [Function],
            "Content": [Function],
            "background": "#193549",
            "backgroundFill": "tomato",
            "fill": "#273B7A",
            "id": 7,
            "meta": "Value Creation",
            "title": "hackathon",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <DockIcon
            clickHandler={[MockFunction]}
            tile={
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 0,
                "meta": "Joseph",
                "title": "About Me",
              }
            }
          />,
          <DockIcon
            clickHandler={[MockFunction]}
            tile={
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#292929",
                "id": 1,
                "meta": "Certified",
                "title": "ReactJS",
              }
            }
          />,
          <DockIcon
            clickHandler={[MockFunction]}
            tile={
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#F0DB4F",
                "id": 2,
                "meta": "Favorite Language",
                "title": "JavaScript",
              }
            }
          />,
          <DockIcon
            clickHandler={[MockFunction]}
            tile={
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "#5159BF",
                "fill": "#292929",
                "id": 3,
                "meta": "Framework",
                "title": "Redux",
              }
            }
          />,
          <DockIcon
            clickHandler={[MockFunction]}
            tile={
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 4,
                "meta": "Problem Solving",
                "title": "algorithms",
              }
            }
          />,
          <DockIcon
            clickHandler={[MockFunction]}
            tile={
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 6,
                "meta": "Code as a hobby",
                "title": "python",
              }
            }
          />,
          <DockIcon
            clickHandler={[MockFunction]}
            tile={
              Object {
                "Component": [Function],
                "Content": [Function],
                "background": "#193549",
                "backgroundFill": "tomato",
                "fill": "#273B7A",
                "id": 7,
                "meta": "Value Creation",
                "title": "hackathon",
              }
            }
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "display": "flex",
          "flexWrap": "wrap",
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [MockFunction],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 0,
              "meta": "Joseph",
              "title": "About Me",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [MockFunction],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#292929",
              "id": 1,
              "meta": "Certified",
              "title": "ReactJS",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [MockFunction],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#F0DB4F",
              "id": 2,
              "meta": "Favorite Language",
              "title": "JavaScript",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [MockFunction],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "#5159BF",
              "fill": "#292929",
              "id": 3,
              "meta": "Framework",
              "title": "Redux",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [MockFunction],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 4,
              "meta": "Problem Solving",
              "title": "algorithms",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "6",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [MockFunction],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 6,
              "meta": "Code as a hobby",
              "title": "python",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "7",
          "nodeType": "function",
          "props": Object {
            "clickHandler": [MockFunction],
            "tile": Object {
              "Component": [Function],
              "Content": [Function],
              "background": "#193549",
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 7,
              "meta": "Value Creation",
              "title": "hackathon",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`DockIcon renders 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DockIcon
    clickHandler={[MockFunction]}
    tile={
      Object {
        "Component": [Function],
        "Content": [Function],
        "background": "#193549",
        "backgroundFill": "tomato",
        "fill": "#273B7A",
        "id": 0,
        "meta": "Joseph",
        "title": "About Me",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <LoadableComponent
        fill="#273B7A"
        handler={[Function]}
      />,
      "style": Object {
        "alignItems": "center",
        "display": "flex",
        "height": "100px",
        "justifyContent": "center",
        "margin": "5px",
        "width": "100px",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "fill": "#273B7A",
        "handler": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "svg",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <LoadableComponent
          fill="#273B7A"
          handler={[Function]}
        />,
        "style": Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100px",
          "justifyContent": "center",
          "margin": "5px",
          "width": "100px",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#273B7A",
          "handler": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "svg",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
